[package]
name = "idp"
version = "0.1.0"
edition = "2021"
description = "Mock OpenID Connect Identity Provider for local testing"

[[bin]]
name = "idp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
urlencoding = "2"

[profile.release]
opt-level = 2
